Fix flash of double scrollbar on modal #787

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -250,13 +250,14 @@
 *******************************/
 
 /* A modal that cannot fit on the page */
-
 .ui.scrolling.dimmable.dimmed {
   overflow: hidden;
 }
+.ui.scrolling.dimmable.dimmed > .dimmer {
+  overflow: auto;
+}
 .ui.scrolling.dimmable > .dimmer {
   position: fixed;
-  overflow: auto;
 }
 .ui.modal.scrolling {
   position: static;
